<resources>
    <string name="app_name">Weather Forecast App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_search">Search</string>
    <string name="navigation_favorites">Favorites</string>
    <string name="navigation_settings">Settings</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>

    <string name="current_temp_cel">%1$d°</string>
    <string name="min_max_temp_cel">%1$d° / %2$d°</string>
    <string name="wind_kmh">%1$d km/h (NW)</string>
    <string name="visibility_km">%1$d km</string>
    <string name="current_temp_fahr">%1$d°</string>
    <string name="min_max_temp_fahr">%1$d° / %2$d°</string>
    <string name="wind_mph">%1$d mph (NW)</string>
    <string name="visibility_mil">%1$d miles</string>
    <string name="humidity">%1$d %%</string>
    <string name="pressure">%1$d hPa</string>


    <string name="language">Language</string>
    <string name="croatian">Croatian</string>
    <string name="english">English</string>
    <string name="units">Units</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="today">Today</string>
    <string name="min_max">MIN / MAX</string>
    <string name="wind_title">WIND</string>
    <string name="humidity_title">HUMIDITY</string>
    <string name="pressure_title">PRESSURE</string>
    <string name="visibility_title">VISIBILITY</string>
    <string name="accuracy_title">ACCURACY</string>
    <string name="next_seven_days">Next 7 days</string>

</resources>