<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:id="@+id/settingsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/languageTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textSize="20sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:textStyle="bold">


        </TextView>

        <Button
            android:id="@+id/croatianButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:drawableEnd="@drawable/cro_flag"
            android:text="@string/croatian"
            android:textSize="18sp"
            android:backgroundTint="@color/darker_blue"
            >
        </Button>

        <Button
            android:id="@+id/englishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:drawableEnd="@drawable/english_flag"
            android:text="@string/english"
            android:textSize="18sp"
            android:backgroundTint="@color/darker_blue"
            >
        </Button>

        <TextView
            android:id="@+id/unitsTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/units"
            android:textSize="20sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/metricButton"
            android:drawableEnd="@drawable/metric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/metric"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"

            />

        <Button
            android:drawableEnd="@drawable/crown"
            android:id="@+id/imperialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/imperial"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>